--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ p {
 
 hr.dotted {
 	border: 0;
-	border-top: 2px dotted dimgray;
+	border-top: 2px dotted black;
 }
 hr.thick {
 	border: 0;
@@ -45,14 +45,14 @@ button {
 #sectionLeft {
 	float: left;
 	width: 640px;
-	background: rgb(240,240,240);
+	background: rgb(243,243,243);
 }
 
 #sectionRight {
 	float: right;
 	width: 260px;
 	padding: 20px;
-	background: rgb(240,240,240);
+	background: rgb(243,243,243);
 }
 
 /* PETITION HEADER ------------------------------------------ */
@@ -77,7 +77,7 @@ button {
 	font-size: 40px;
 	line-height: 45px;
 	text-align: center;
-	background: black linear-gradient(dimgray, black);
+	background: black linear-gradient(rgb(85, 85, 85), black);
 }
 .counter-num:last-child {
 	margin-right: 0;
@@ -122,7 +122,7 @@ input, select {
 button.sign {
 	padding: 10px;
 	color: white;
-	background: red;
+	background: rgb(213, 23, 1);
 }
 
 /* CAPTCHA ------------------------------------------ */
@@ -182,7 +182,7 @@ iframe {
 #pdf button {
 	padding: 10px;
 	color: white;
-	background: dimgray;
+	background: rgb(51, 51, 51);
 }
 
 /* THANKS ------------------------------------------ */
@@ -205,7 +205,7 @@ iframe {
 	line-height: 40px;
 	color: white;
 	text-decoration: none;
-	background: dimgray;
+	background: rgb(51, 51, 51);
 	border-radius: 50%;
 }
 
@@ -213,5 +213,5 @@ iframe {
 
 .centered { text-align: center; }
 .italic { font-style: italic; }
-.red { color: red; }
+.red { color: rgb(213, 23, 1); }
 .clear { clear: both; }
