--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ p {
 hr.dotted {
 	border: 0;
 	border-top: 2px dotted black;
+	margin: 20px 0;
 }
 hr.thick {
 	border: 0;
@@ -51,15 +52,12 @@ button {
 #sectionRight {
 	float: right;
 	width: 260px;
-	padding: 20px;
+	padding: 30px 20px;
 	background: rgb(243,243,243);
 }
 
 /* PETITION HEADER ------------------------------------------ */
 
-#progress {
-	padding: 10px 0;
-}
 #progress p {
 	font-size: .6em;
 	font-weight: 700;
@@ -96,13 +94,13 @@ button {
 }
 
 .punchline {
-	margin-bottom: 10px;
+	margin: 30px 0;
 	text-transform: uppercase;
 }
 
 input, select {
-	margin: 0 0 10px 0;
-	padding: 5px;
+	margin: 0 0 15px 0;
+	padding: 6px;
 	border: 1px solid silver;
 	border-radius: 4px;
 }
@@ -111,12 +109,13 @@ input, select {
 	width: 248px;
 }
 .half {
-	width: 122px;
+	width: 121px;
 }
 
 .instructions {
-	font-size: .55em;
+	font-size: .5em;
 	text-align: left;
+	margin-bottom: 20px;
 }
 
 button.sign {
@@ -129,6 +128,7 @@ button.sign {
 
 #captcha {
 	width: 258px;
+	margin-bottom: 10px;
 }
 #recaptcha_table {
 	display: block;
@@ -179,6 +179,10 @@ iframe {
 
 /* PDF ------------------------------------------ */
 
+#pdf p {
+	margin-bottom: 10px;
+}
+
 #pdf button {
 	padding: 10px;
 	color: white;
@@ -197,12 +201,13 @@ iframe {
 
 #social p {
 	text-transform: uppercase;
+	margin-bottom: 10px;
 }
 
 #social a {
 	display: inline-block;
-	width: 40px; height: 40px;
-	line-height: 40px;
+	width: 30px; height: 30px;
+	line-height: 30px;
 	color: white;
 	text-decoration: none;
 	background: rgb(51, 51, 51);
