--- a/css/style.css
+++ b/css/style.css
@@ -23,14 +23,16 @@ hr.dotted {
 }
 hr.thick {
 	border: 0;
-	border-top: 5px solid black;
+	border-top: 10px solid black;
+	margin: 30px 0;
 }
 
 button {
+	font-family: 'Roboto Slab', serif;
+	font-weight: bold;
 	border: 0;
 	border-radius: 0;
 	cursor: pointer;
-	font-family: 'Roboto Slab', serif;
 }
 
 .invalid {
@@ -58,21 +60,24 @@ button {
 
 /* PETITION HEADER ------------------------------------------ */
 
+#progress {
+	margin-bottom: 30px;
+}
 #progress p {
-	font-size: .6em;
-	font-weight: 700;
+	margin: 0 -20px;
+	font-size: .7em;
 }
 
 #counter {
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 }
 .counter-num {
 	display: inline-block;
-	height: 48px; width: 30px;
-	margin: 0 1px 0 0;
+	height: 45px; width: 25px;
+	margin: 0 2px 0 0;
 	color: white;
 	border-radius: 5px;
-	font-size: 40px;
+	font-size: 25px;
 	line-height: 45px;
 	text-align: center;
 	background: black linear-gradient(rgb(85, 85, 85), black);
@@ -84,7 +89,7 @@ button {
 .counter-space {
 	display: inline-block;
 	width: 1px;
-	margin-right: 8px;
+	margin-right: 12px;
 }
 
 /* PETITION FORM ------------------------------------------ */
@@ -94,34 +99,40 @@ button {
 }
 
 .punchline {
-	margin: 30px 0;
+	margin: 0 10px 30px 10px;
 	text-transform: uppercase;
+	line-height: 19px;
 }
 
 input, select {
 	margin: 0 0 15px 0;
-	padding: 6px;
+	padding: 7px 10px;
 	border: 1px solid silver;
 	border-radius: 4px;
 }
 .full {
 	display: block;
-	width: 248px;
+	width: 238px;
 }
-.half {
-	width: 121px;
+select.half { width: 123px; }
+input.half { width: 101px; }
+
+#signCountry {
+	margin-right: 10px;
 }
 
 .instructions {
 	font-size: .5em;
 	text-align: left;
+	letter-spacing: .3px;
 	margin-bottom: 20px;
 }
 
 button.sign {
-	padding: 10px;
 	color: white;
-	background: rgb(213, 23, 1);
+	background: rgb(214, 0, 0);
+	padding: 10px 15px;
+	font-size: .95em;
 }
 
 /* CAPTCHA ------------------------------------------ */
@@ -180,13 +191,16 @@ iframe {
 /* PDF ------------------------------------------ */
 
 #pdf p {
-	margin-bottom: 10px;
+	font-weight: bold;
+	font-size: 0.8em;
+	margin: 0 10px 10px 10px;
+	line-height: 15px;
 }
 
 #pdf button {
-	padding: 10px;
 	color: white;
 	background: rgb(51, 51, 51);
+	padding: 8px 15px;
 }
 
 /* THANKS ------------------------------------------ */
@@ -195,6 +209,10 @@ iframe {
 	display: none;
 	padding: 0 40px;
 	text-transform: uppercase;
+}
+
+#petitionThanks p:last-of-type {
+	margin-bottom: 30px;
 }
 
 /* SOCIAL ------------------------------------------ */
@@ -218,5 +236,6 @@ iframe {
 
 .centered { text-align: center; }
 .italic { font-style: italic; }
-.red { color: rgb(213, 23, 1); }
+.red { color: rgb(214, 0, 0); }
+.huge { font-size: 1.5em; }
 .clear { clear: both; }
