--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ p.indent {
 p.indent strong {
 	font-size: 20px;
 	text-decoration: underline;
+	white-space: nowrap;
 }
 p.legal {
     font-size: 10px;
@@ -180,6 +181,7 @@ input.half { width: 101px; }
 
 button.sign {
 	position: relative;
+	max-width: 100%;
 	color: white;
 	background-color: rgb(214, 0, 0);
 	padding: 10px 15px;
@@ -262,11 +264,14 @@ iframe {
 	font-size: 14px;
 }
 
-#pdf button {
+.pdfBtn {
 	color: white;
 	background-color: rgb(51, 51, 51);
 	padding: 8px 15px;
 	font-size: 14px;
+}
+#petitionThanks .pdfBtn {
+	margin-top: 10px;
 }
 
 /* THANKS ------------------------------------------ */
