--- a/css/style.css
+++ b/css/style.css
@@ -66,10 +66,7 @@ button:focus {
 /* PETITION TEXT ------------------------------------------ */
 
 #sectionLeft h1 {
-	text-transform: uppercase;
-	font-size: 72px;
 	text-align: center;
-	text-decoration: underline;
 	margin: 0 0 40px 0;
 }
 
@@ -95,7 +92,8 @@ p.indent strong {
 	width: 100%;
 	text-align: center;
 	text-indent: 0;
-	font-size: 20px;
+	font-size: 28px;
+	word-spacing: 2px;
 	text-decoration: underline;
 	white-space: nowrap;
 }
